--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -2,9 +2,31 @@ pipeline {
   agent any
     
   stages {
-    stage('Echo Hello') {
+    stage('Git fatch') {
       steps{
-        echo 'Hello World!!'
+        echo 'Git fatch'
+        git url: 'https://github.com/yooleem/spring-petclinic.git/',
+          branch: main, credentialID: 'gitCredential'
+      }
+    }
+    stage('Maven Build') {
+      steps{
+        echo 'Maven Build'
+      }
+    }
+    stage('Docker Image') {
+      steps{
+        echo 'Docker Image'
+      }
+    }
+    stage('Image Push') {
+      steps{
+        echo 'Image Push'
+      }
+    }
+    stage('Codedeploy Workload') {
+      steps{
+        echo 'Codedeploy Workload'
       }
     }
   }
