--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
       steps{
         echo 'Git fatch'
         git url: 'https://github.com/yooleem/spring-petclinic.git/',
-          branch: main, credentialID: 'gitCredential'
+          branch: 'main', credentialID: 'gitCredential'
       }
     }
     stage('Maven Build') {
