--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
   agent any
+  tools {
+    maven "M3"
+    jdk "JDK11"
+  }
     
   stages {
     stage('Git fatch') {
@@ -12,6 +16,7 @@ pipeline {
     stage('Maven Build') {
       steps{
         echo 'Maven Build'
+        sh 'mvn -Dmaven.test.failure.ignore=true clean package'
       }
     }
     stage('Docker Image') {
