--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -19,17 +19,12 @@ pipeline {
         sh 'mvn -Dmaven.test.failure.ignore=true clean package'
       }
     }
-    stage('Target Workload') {
-      steps{
-        echo 'Target Workload'
-        sshPublisher(publishers: [sshPublisherDesc(configName: 'target', transfers: [sshTransfer(cleanRemote: false, excludes: '', execCommand: '''fuser -k 8080/tcp
-export BUILD_ID=PetClinic
-nohup java -jar /home/ubuntu/deploy/spring-petclinic-2.7.3.jar >> nohup.out 2>&1 &''', execTimeout: 120000, flatten: false, makeEmptyDirs: false, noDefaultExcludes: false, patternSeparator: '[, ]+', remoteDirectory: 'deploy', remoteDirectorySDF: false, removePrefix: 'target', sourceFiles: 'target/*.jar')], usePromotionTimestamp: false, useWorkspaceInPromotion: false, verbose: false)])
-      }
-    }
     stage('Docker Image') {
       steps{
         echo 'Docker Image'
+        dir("${env.WORKSPACE}") {
+          sh 'docker build -t aws04-spring-petclinic:1.0' 
+        }
       }
     }
     stage('Image Push') {
