--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -4,6 +4,17 @@ pipeline {
     maven "M3"
     jdk "JDK11"
   }
+  
+  environment {
+    AWS_CREDENTIAL_NAME = "awsEcrAWSCredentials"
+    AWS_ACCOUT_ID = "257307634175"
+    REGION = "ap-northeast-2"
+    DOCKER_IMAGE_NAME="aws04-spring-petclinic"
+    DOCKER_TAG="1.0"
+    ECR_REPOSITORY = "${AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
+    ECR_DOCKER_IMAGE = "${ECR_REPOSITORY}/${DOCKER_IMAGE_NAME}"
+    ECR_DOCKER_TAG = "${DOCKER_TAG}"
+  }
     
   stages {
     stage('Git fatch') {
