--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -34,13 +34,21 @@ pipeline {
       steps{
         echo 'Docker Image'
         dir("${env.WORKSPACE}") {
-          sh 'docker build -t aws04-spring-petclinic:1.0 .' 
+          sh 'docker build -t ${ECR_REPOSITORY}:${DOCKER_IMAGE_NAME} .' 
         }
       }
     }
     stage('Image Push') {
       steps{
         echo 'Image Push'
+        script{
+          // cleanup current user docker credentials
+          sh 'rm -f ~/.dockercfg ~/.docker/config.json || true'                    
+                   
+          docker.withRegistry("https://${ECR_REPOSITORY}", "ecr:${REGION}:${AWS_CREDENTIAL_NAME}") {
+          docker.image("${ECR_DOCKER_IMAGE}:${ECR_DOCKER_TAG}").push()
+          }
+        }
       }
     }
     stage('Codedeploy Workload') {
